--- a/profile.html
+++ b/profile.html
@@ -3,24 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User Profile</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Profile Card</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>User Profile</h1>
-    </header>
-    <main>
-        <section class="profile-info">
-            <h2>John Doe</h2>
-            <p>Email: bheeman902@gmail.com</p>
-            <p>Location: New York, USA</p>  
-            <p>Bio: Web developer with a passion for creating beautiful and functional websites.</p>
-        </section>
-        <section class="profile-actions">
-            <button>Edit Profile</button>
-            <button>Settings</button>
-            <button>Logout</button> 
-        </section>
-    </main>
+
+    <div class="card">
+        <div class="avatar">
+            <img src="avatar.png" alt="Avatar">
+        </div>
+
+        <h2>John Doe</h2>
+        <p>
+            Frontend Developer passionate about creating beautiful and
+            functional web experiences. Love coding, design, and coffee!
+        </p>
+
+        <div class="social-buttons">
+            <a href="#">GitHub</a>
+            <a href="#">LinkedIn</a>
+            <a href="#">Twitter</a>
+        </div>
+    </div>
+
+</body>
 </html>
