added profile picture

--- a/profile.html
+++ b/profile.html
@@ -10,7 +10,7 @@
 
     <div class="card">
         <div class="avatar">
-            <img src="avatar.png" alt="Avatar">
+            <img src="profile.png" alt="Avatar">
         </div>
 
         <h2>John Doe</h2>
