change in about

--- a/profile.html
+++ b/profile.html
@@ -10,13 +10,12 @@
 
     <div class="card">
         <div class="avatar">
-            <img src="profile.png" alt="Avatar">
+            <img src="profile.png" alt="Profile Photo">
         </div>
 
-        <h2>John Doe</h2>
+        <h2>Bheemesh N S</h2>
         <p>
-            Frontend Developer passionate about creating beautiful and
-            functional web experiences. Love coding, design, and coffee!
+            A passionate developer with hackathon experience and cleane code practices. Skilled in problem-solving and eager to learn new technologies.
         </p>
 
         <div class="social-buttons">
