--- a/profile.html
+++ b/profile.html
@@ -19,9 +19,9 @@
         </p>
 
         <div class="social-buttons">
-            <a href="#">GitHub</a>
-            <a href="#">LinkedIn</a>
-            <a href="#">Twitter</a>
+            <a href="https://github.com/bheemesh-ns">GitHub</a>
+            <a href="">Mail</a>
+            <a href="#">HackerRank</a>
         </div>
     </div>
 
