--- a/profile.html
+++ b/profile.html
@@ -20,8 +20,8 @@
 
         <div class="social-buttons">
             <a href="https://github.com/bheemesh-ns">GitHub</a>
-            <a href="">Mail</a>
-            <a href="#">HackerRank</a>
+            <a href="bheeman902@gmail.com">Mail</a>
+            <a href="https://www.hackerrank.com/profile/bheemeshns">HackerRank</a>
         </div>
     </div>
 
