--- a/profile.html
+++ b/profile.html
@@ -10,10 +10,10 @@
 
     <div class="card">
         <div class="avatar">
-            <img src="profile.png" alt="Profile Photo">
+            <img src="lalo.jpg" alt="Profile Photo">
         </div>
 
-        <h2>Bheemesh N S</h2>
+        <h2>Lalo Salamanka</h2>
         <p>
             A passionate developer with hackathon experience and cleane code practices. Skilled in problem-solving and eager to learn new technologies.
         </p>
